a little more work on this

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -127,7 +127,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some variables seem to provide little extra information over others, for example, YearBuilt and GarageYrBlt."
+    "Some variables seem to provide little extra information over others, for example, YearBuilt and GarageYrBlt. This means there is quite a lot of multicolinearity in the data. This is very relevant if we want to fit a linear model.\n",
+    "\n",
+    "Let's finally take a look at the variables with the highest correlation with the target variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "correlations[, 38] %>% sort(decreasing = TRUE) %>% print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall quality, ground living area, year built, garage capacity and the number of full bathrooms are the variables most correlated with the target variable.\n",
+    "\n",
+    "Let's take a look at the number of levels of each categorical variable. Variables with only two levels are transformed to numerical variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_data <- as.data.frame(unclass(train_data), stringsAsFactors = TRUE)\n",
+    "\n",
+    "train_data$Street <- as.numeric(train_data$Street)\n",
+    "train_data$Alley <- as.numeric(train_data$Alley)\n",
+    "train_data$Utilities <- as.numeric(train_data$Utilities)\n",
+    "train_data$CentralAir <- as.numeric(train_data$CentralAir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lapply(train_data, is.na) %>% sapply(sum) %>% sapply(function(x) x / 1460) %>% sort(decreasing = TRUE) -> na_proportion\n",
+    "\n",
+    "print(na_proportion[0:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll simply remove the variables with more than 20% of missing values."
    ]
   }
  ],
