variable transforming + eda

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -13,7 +13,10 @@
     "library(corrplot)\n",
     "library(ggplot2)\n",
     "library(tidyr)\n",
-    "library(dplyr)"
+    "library(dplyr)\n",
+    "library(purrr)\n",
+    "library(GGally)\n",
+    "library(MASS)"
    ]
   },
   {
@@ -96,8 +99,8 @@
    "source": [
     "options(repr.plot.width=20, repr.plot.height=20)\n",
     "nums <- unlist(lapply(train_data, is.numeric), use.names = FALSE)\n",
-    "train_data %>% select_if(is.numeric) %>%  gather(cols, value) %>%  ggplot(aes(value)) + geom_histogram() + facet_wrap(~cols, scales='free_x')\n",
-    "options(repr.plot.width=8, repr.plot.height=8)"
+    "train_data %>% select_if(is.numeric) %>%  gather(cols, value) %>%  ggplot(aes(value)) + geom_histogram() + facet_wrap(~cols, scales='free')\n",
+    "options(repr.plot.width=12, repr.plot.height=12)"
    ]
   },
   {
@@ -192,6 +195,353 @@
    "metadata": {},
    "source": [
     "We'll simply remove the variables with more than 20% of missing values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_data_cleaned <- subset(train_data, select = -c(PoolQC, MiscFeature, Alley, Fence, FireplaceQu))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's take a look at the variables with the highest correlation with the target variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "correlations[, 38] %>% sort(decreasing = TRUE) %>% names() -> cols\n",
+    "train_data_cleaned %>% dplyr::select(cols[0:10]) %>% ggpairs(aes(alpha = 0.75)) + theme_bw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the first column, we can see that in fact those variables seem to be positively correlated with the target variable. However, only overall quality seems to be reasonably normally distributed. Let's take a look at their distributions and transform them to get more normal-like distributions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "options(repr.plot.width=6, repr.plot.height=6)\n",
+    "\n",
+    "qqnorm(train_data_cleaned$SalePrice)\n",
+    "qqline(train_data_cleaned$SalePrice)\n",
+    "\n",
+    "train_data_cleaned$SalePriceLog <- log(train_data_cleaned$SalePrice)\n",
+    "qqnorm(train_data_cleaned$SalePriceLog)\n",
+    "qqline(train_data_cleaned$SalePriceLog)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "qqnorm(train_data_cleaned$GrLivArea)\n",
+    "qqline(train_data_cleaned$GrLivArea)\n",
+    "\n",
+    "train_data_cleaned$GrLivAreaLog <- log(train_data_cleaned$GrLivArea)\n",
+    "qqnorm(train_data_cleaned$GrLivAreaLog)\n",
+    "qqline(train_data_cleaned$GrLivAreaLog)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "qqnorm(train_data_cleaned$YearBuilt)\n",
+    "qqline(train_data_cleaned$YearBuilt)\n",
+    "\n",
+    "train_data_cleaned$YearBuiltLogInv <- log(1 / train_data_cleaned$YearBuilt)\n",
+    "qqnorm(train_data_cleaned$YearBuiltLogInv)\n",
+    "qqline(train_data_cleaned$YearBuiltLogInv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This one is so skewed the transformation is not enough to make it normal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "qqnorm(train_data_cleaned$GarageArea)\n",
+    "qqline(train_data_cleaned$GarageArea)\n",
+    "\n",
+    "train_data_cleaned$GarageAreaLog <- log(train_data_cleaned$GarageArea + 1)\n",
+    "qqnorm(train_data_cleaned$GarageAreaLog)\n",
+    "qqline(train_data_cleaned$GarageAreaLog)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since this one has a lot of zeros, we'll create a new variable indicating if a garage is present or not. We'll also turn the zero values into NAs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_data_cleaned$GaragePresent <- as.numeric(train_data_cleaned$GarageArea > 0)\n",
+    "train_data_cleaned$GarageAreaLog <- ifelse(train_data_cleaned$GaragePresent, train_data_cleaned$GarageAreaLog, NA)\n",
+    "summary(train_data_cleaned$GarageAreaLog)\n",
+    "summary(train_data_cleaned$GaragePresent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "qqnorm(train_data_cleaned$GarageYrBlt)\n",
+    "qqline(train_data_cleaned$GarageYrBlt)\n",
+    "\n",
+    "train_data_cleaned$GarageYrBltLogInv <- log(1 / train_data_cleaned$GarageYrBlt)\n",
+    "qqnorm(train_data_cleaned$GarageYrBltLogInv)\n",
+    "qqline(train_data_cleaned$GarageYrBltLogInv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "qqnorm(train_data_cleaned$TotalBsmtSF)\n",
+    "qqline(train_data_cleaned$TotalBsmtSF)\n",
+    "\n",
+    "train_data_cleaned$TotalBsmtSFLog <- log(1 + train_data_cleaned$TotalBsmtSF)\n",
+    "qqnorm(train_data_cleaned$TotalBsmtSFLog)\n",
+    "qqline(train_data_cleaned$TotalBsmtSFLog)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, it's useful to create a new variable indicating if a basement is present or not and turn zeros into NAs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_data_cleaned$BasementPresent <- as.numeric(train_data_cleaned$TotalBsmtSF > 0)\n",
+    "train_data_cleaned$TotalBsmtSFLog <- ifelse(train_data_cleaned$BasementPresent, train_data_cleaned$TotalBsmtSFLog, NA)\n",
+    "summary(train_data_cleaned$TotalBsmtSFLog)\n",
+    "summary(train_data_cleaned$BasementPresent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(cols)\n",
+    "\n",
+    "qplot(train_data_cleaned$YearRemodAdd, train_data_cleaned$SalePrice, geom = \"point\")\n",
+    "qqnorm(train_data_cleaned$YearRemodAdd)\n",
+    "qqline(train_data_cleaned$YearRemodAdd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is again too skewed and there's also a suspicious excess of 1950s in this variable. For this reason, We'll binarize this variable around 1985 (by visual inspection)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_data_cleaned$YearRemodAddBinary <- as.numeric(train_data_cleaned$YearRemodAdd >= 1985)\n",
+    "summary(train_data_cleaned$YearRemodAddBinary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "qqnorm(train_data_cleaned$X1stFlrSF)\n",
+    "qqline(train_data_cleaned$X1stFlrSF)\n",
+    "\n",
+    "train_data_cleaned$X1stFlrSFLog <- log(train_data_cleaned$X1stFlrSF)\n",
+    "qqnorm(train_data_cleaned$X1stFlrSFLog)\n",
+    "qqline(train_data_cleaned$X1stFlrSFLog)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Perfect, now we have a data table with transformed variables and some new ones for those that are most correlated with the target variable. Let's visualize again the correlation patterns between the target variables and the transformed variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "options(repr.plot.width=12, repr.plot.height=12)\n",
+    "\n",
+    "transformed_cols = c(\n",
+    "    \"SalePriceLog\", \"OverallQual\", \"GrLivAreaLog\",\n",
+    "    \"YearBuiltLogInv\", \"GarageCars\", \"FullBath\",\n",
+    "    \"GarageAreaLog\", \"GarageYrBltLogInv\", \"TotalBsmtSFLog\",\n",
+    "    \"YearRemodAddBinary\", \"X1stFlrSFLog\")\n",
+    "\n",
+    "train_data_cleaned %>% dplyr::select(transformed_cols) %>% ggpairs(aes(alpha = 0.75)) + theme_bw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first column looks better now with the transformed variables. Let's fit a simple linear regression model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "formula <- paste(\"SalePrice ~ \", paste(transformed_cols, collapse = \" + \"), sep = \"\")\n",
+    "\n",
+    "linear_model <- lm(formula, data = train_data_cleaned)\n",
+    "\n",
+    "summary(linear_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the correlation plots we can see there's quite some multicolinearity happening here. Still, the model doesn't seem all that bad with R^2 = 0.91. Let's add the categorical variables to the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_data_cleaned %>% select_if(purrr::negate(is.numeric)) %>% names() -> categorical_cols\n",
+    "\n",
+    "lm_cols = c(transformed_cols, categorical_cols)\n",
+    "\n",
+    "formula <- paste(\"SalePrice ~ \", paste(lm_cols, collapse = \" + \"), sep = \"\")\n",
+    "\n",
+    "linear_model <- lm(formula, data = train_data_cleaned)\n",
+    "\n",
+    "summary(linear_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "R² is not 0.95. However, we should take this with a grain of salt since there are far too many categorical variables and levels. It's a good idea to either use a form of variable selection such as lasso or another type of model that can implicitly handle the excess of variables."
    ]
   }
  ],
