include test data and validation split

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -16,7 +16,8 @@
     "library(dplyr)\n",
     "library(purrr)\n",
     "library(GGally)\n",
-    "library(MASS)"
+    "library(MASS)\n",
+    "library(caret)"
    ]
   },
   {
@@ -172,7 +173,16 @@
     "train_data$Street <- as.numeric(train_data$Street)\n",
     "train_data$Alley <- as.numeric(train_data$Alley)\n",
     "train_data$Utilities <- as.numeric(train_data$Utilities)\n",
-    "train_data$CentralAir <- as.numeric(train_data$CentralAir)\n"
+    "train_data$CentralAir <- as.numeric(train_data$CentralAir)\n",
+    "\n",
+    "\n",
+    "# test data\n",
+    "test_data <- as.data.frame(unclass(test_data), stringsAsFactors = TRUE)\n",
+    "\n",
+    "test_data$Street <- as.numeric(test_data$Street)\n",
+    "test_data$Alley <- as.numeric(test_data$Alley)\n",
+    "test_data$Utilities <- as.numeric(test_data$Utilities)\n",
+    "test_data$CentralAir <- as.numeric(test_data$CentralAir)"
    ]
   },
   {
@@ -207,7 +217,9 @@
    },
    "outputs": [],
    "source": [
-    "train_data_cleaned <- subset(train_data, select = -c(PoolQC, MiscFeature, Alley, Fence, FireplaceQu))"
+    "train_data_cleaned <- subset(train_data, select = -c(PoolQC, MiscFeature, Alley, Fence, FireplaceQu))\n",
+    "\n",
+    "test_data_cleaned <- subset(test_data, select = -c(PoolQC, MiscFeature, Alley, Fence, FireplaceQu))"
    ]
   },
   {
@@ -272,6 +284,7 @@
     "qqline(train_data_cleaned$GrLivArea)\n",
     "\n",
     "train_data_cleaned$GrLivAreaLog <- log(train_data_cleaned$GrLivArea)\n",
+    "test_data_cleaned$GrLivAreaLog <- log(test_data_cleaned$GrLivArea)\n",
     "qqnorm(train_data_cleaned$GrLivAreaLog)\n",
     "qqline(train_data_cleaned$GrLivAreaLog)"
    ]
@@ -290,6 +303,7 @@
     "qqline(train_data_cleaned$YearBuilt)\n",
     "\n",
     "train_data_cleaned$YearBuiltLogInv <- log(1 / train_data_cleaned$YearBuilt)\n",
+    "test_data_cleaned$YearBuiltLogInv <- log(1 / test_data_cleaned$YearBuilt)\n",
     "qqnorm(train_data_cleaned$YearBuiltLogInv)\n",
     "qqline(train_data_cleaned$YearBuiltLogInv)"
    ]
@@ -315,6 +329,7 @@
     "qqline(train_data_cleaned$GarageArea)\n",
     "\n",
     "train_data_cleaned$GarageAreaLog <- log(train_data_cleaned$GarageArea + 1)\n",
+    "test_data_cleaned$GarageAreaLog <- log(test_data_cleaned$GarageArea + 1)\n",
     "qqnorm(train_data_cleaned$GarageAreaLog)\n",
     "qqline(train_data_cleaned$GarageAreaLog)"
    ]
@@ -339,7 +354,10 @@
     "train_data_cleaned$GaragePresent <- as.numeric(train_data_cleaned$GarageArea > 0)\n",
     "train_data_cleaned$GarageAreaLog <- ifelse(train_data_cleaned$GaragePresent, train_data_cleaned$GarageAreaLog, NA)\n",
     "summary(train_data_cleaned$GarageAreaLog)\n",
-    "summary(train_data_cleaned$GaragePresent)"
+    "summary(train_data_cleaned$GaragePresent)\n",
+    "\n",
+    "test_data_cleaned$GaragePresent <- as.numeric(test_data_cleaned$GarageArea > 0)\n",
+    "test_data_cleaned$GarageAreaLog <- ifelse(test_data_cleaned$GaragePresent, train_data_cleaned$GarageAreaLog, NA)"
    ]
   },
   {
@@ -356,6 +374,7 @@
     "qqline(train_data_cleaned$GarageYrBlt)\n",
     "\n",
     "train_data_cleaned$GarageYrBltLogInv <- log(1 / train_data_cleaned$GarageYrBlt)\n",
+    "test_data_cleaned$GarageYrBltLogInv <- log(1 / test_data_cleaned$GarageYrBlt)\n",
     "qqnorm(train_data_cleaned$GarageYrBltLogInv)\n",
     "qqline(train_data_cleaned$GarageYrBltLogInv)"
    ]
@@ -374,6 +393,7 @@
     "qqline(train_data_cleaned$TotalBsmtSF)\n",
     "\n",
     "train_data_cleaned$TotalBsmtSFLog <- log(1 + train_data_cleaned$TotalBsmtSF)\n",
+    "test_data_cleaned$TotalBsmtSFLog <- log(1 + test_data_cleaned$TotalBsmtSF)\n",
     "qqnorm(train_data_cleaned$TotalBsmtSFLog)\n",
     "qqline(train_data_cleaned$TotalBsmtSFLog)"
    ]
@@ -398,7 +418,10 @@
     "train_data_cleaned$BasementPresent <- as.numeric(train_data_cleaned$TotalBsmtSF > 0)\n",
     "train_data_cleaned$TotalBsmtSFLog <- ifelse(train_data_cleaned$BasementPresent, train_data_cleaned$TotalBsmtSFLog, NA)\n",
     "summary(train_data_cleaned$TotalBsmtSFLog)\n",
-    "summary(train_data_cleaned$BasementPresent)"
+    "summary(train_data_cleaned$BasementPresent)\n",
+    "\n",
+    "test_data_cleaned$BasementPresent <- as.numeric(test_data_cleaned$TotalBsmtSF > 0)\n",
+    "test_data_cleaned$TotalBsmtSFLog <- ifelse(test_data_cleaned$BasementPresent, train_data_cleaned$TotalBsmtSFLog, NA)"
    ]
   },
   {
@@ -436,7 +459,9 @@
    "outputs": [],
    "source": [
     "train_data_cleaned$YearRemodAddBinary <- as.numeric(train_data_cleaned$YearRemodAdd >= 1985)\n",
-    "summary(train_data_cleaned$YearRemodAddBinary)"
+    "summary(train_data_cleaned$YearRemodAddBinary)\n",
+    "\n",
+    "test_data_cleaned$YearRemodAddBinary <- as.numeric(test_data_cleaned$YearRemodAdd >= 1985)"
    ]
   },
   {
@@ -453,6 +478,7 @@
     "qqline(train_data_cleaned$X1stFlrSF)\n",
     "\n",
     "train_data_cleaned$X1stFlrSFLog <- log(train_data_cleaned$X1stFlrSF)\n",
+    "test_data_cleaned$X1stFlrSFLog <- log(test_data_cleaned$X1stFlrSF)\n",
     "qqnorm(train_data_cleaned$X1stFlrSFLog)\n",
     "qqline(train_data_cleaned$X1stFlrSFLog)"
    ]
@@ -489,7 +515,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first column looks better now with the transformed variables. Let's fit a simple linear regression model."
+    "The first column looks better now with the transformed variables. Let's split the data into train and validation sets and then fit a simple linear regression model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "set.seed(42)\n",
+    "split_index <- caret::createDataPartition(train_data_cleaned$SalePriceLog, p = 0.8, list = FALSE)\n",
+    "train_data_cleaned_train <- train_data_cleaned[split_index,]\n",
+    "train_data_cleaned_val <- train_data_cleaned[-split_index,]"
    ]
   },
   {
@@ -504,9 +546,30 @@
    "source": [
     "formula <- paste(\"SalePrice ~ \", paste(transformed_cols, collapse = \" + \"), sep = \"\")\n",
     "\n",
-    "linear_model <- lm(formula, data = train_data_cleaned)\n",
+    "linear_model <- lm(formula, data = train_data_cleaned_train)\n",
     "\n",
     "summary(linear_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's calculate the root mean squared error, which is the metric used in this competition."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "(predict(linear_model, train_data_cleaned_val) - train_data_cleaned_val$SalePriceLog) %>% mean(na.rm = TRUE) %>% sqrt() -> lm_rmse\n",
+    "print(lm_rmse)"
    ]
   },
   {
@@ -526,22 +589,41 @@
    },
    "outputs": [],
    "source": [
-    "train_data_cleaned %>% select_if(purrr::negate(is.numeric)) %>% names() -> categorical_cols\n",
+    "train_data_cleaned_train %>% select_if(purrr::negate(is.numeric)) %>% names() -> categorical_cols\n",
     "\n",
     "lm_cols = c(transformed_cols, categorical_cols)\n",
     "\n",
     "formula <- paste(\"SalePrice ~ \", paste(lm_cols, collapse = \" + \"), sep = \"\")\n",
     "\n",
-    "linear_model <- lm(formula, data = train_data_cleaned)\n",
+    "linear_model <- lm(formula, data = train_data_cleaned_train)\n",
     "\n",
     "summary(linear_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_data_complete <- tidyr::drop_na(train_data_cleaned_train)\n",
+    "val_data_complete <- tidyr::drop_na(train_data_cleaned_val)\n",
+    "\n",
+    "(predict(linear_model, train_data_complete) - train_data_complete$SalePriceLog) %>% mean(na.rm = TRUE) %>% sqrt() -> lm_rmse\n",
+    "print(lm_rmse)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "R² is not 0.95. However, we should take this with a grain of salt since there are far too many categorical variables and levels. It's a good idea to either use a form of variable selection such as lasso or another type of model that can implicitly handle the excess of variables."
+    "Here train data is used for simplicity since there are many categorical variables whose levels are not the same in both train and validation data.\n",
+    "\n",
+    "R² is now 0.95. However, we should take this with a grain of salt since there are far too many categorical variables and levels and too much multicolinearity. It's a good idea to either use a form of variable selection such as lasso or another type of model that can implicitly handle the excess of variables."
    ]
   }
  ],
